<resources>
    <string name="app_name">Renshū</string>
    <string name="menu_home">Home</string>
    <string name="menu_practice">Practice</string>
    <string name="menu_settings">Settings</string>
    <string name="settings_about">About</string>
    <string name="settings_app_info">App info</string>
    <string name="settings_notification_settings">Notification settings</string>
    <string name="settings_licenses">Licenses</string>
    <string name="app_info_text">The Renshū app was made to help assist you in your way to become fluent in Japanese. In the app you can create word lists where you can practice Kanji/Hiragana/Katakana or anything else. \n\n <b>Features:</b> \n&#8226; Practice ひらがな &amp; カタカナ<br /> \n&#8226; Create Lists<br /> \n&#8226; Build a streak<br /> \n\n\n<b>App Version</b> \n%s</string>
    <string name="app_info_title">App Info</string>
    <string name="custom_button_text">Custom button</string>
    <string name="streak_days">%s日</string>
    <string name="streak_last_studied">%s日前</string>
    <string name="streak_current">Current Streak:</string>
    <string name="streak_best">Best Streak:</string>
    <string name="streak_studied">Last Studied:</string>
    <string name="study_progress_total">Total Progress</string>
    <string name="study_progress_current">Current Progress</string>
    <string name="study_progress_button">Continue</string>
    <string name="home_streak_title">Streak:</string>
    <string name="home_list_progress_title">List Progress:</string>
    <string name="home_hiragana_progress_title">ひらがな Progress:</string>
    <string name="home_katakana_progress_title">カタカナ Progress:</string>
    <string name="practice_title_katakana">カタカナ：</string>
    <string name="practice_title_hiragana">ひらがな：</string>
    <string name="practice_title_list">Lists:</string>
    <string name="practice_hiragana_button">Practice ひらがな</string>
    <string name="practice_katakana_button">Practice　カタカナ</string>
    <string name="practice_toolbar_title">Practice</string>
    <string name="alphabet_title">%1$s: %2$s</string>
    <string name="alphabet_hiragana">Hiragana</string>
    <string name="alphabet_katakana">Katakana</string>
    <string name="alphabet_character_display">%s</string>
    <string name="alphabet_romaji"><b>ローマ字:</b></string>
    <string name="alphabet_character_example"><b>Example: </b></string>
    <string name="alphabet_example_japanese"><b>日本語:</b></string>
    <string name="alphabet_example_meaning"><b>意味:</b></string>
    <string name="alphabet_example_romaji"><b>ローマ字:</b></string>
    <string name="kana_exercise_title">Exercise: %s</string>
    <string name="kana_exercise_progress_title"><b>Progress:</b></string>
    <string name="dialog_body">Are you sure, you want to quit the exercise? Your progress will be saved.</string>
    <string name="dialog_positive">Yes</string>
    <string name="dialog_negative">No</string>
    <string name="practice_add_list_button">Add list</string>
    <string name="custom_list_title"><b>%s</b></string>
    <string name="list_add_hint_kana">Kana</string>
    <string name="list_add_hint_meaning">Meaning</string>
    <string name="list_add_hint_word">Word</string>
    <string name="list_add_button_add">Add</string>
    <string name="list_add_button_remove">Remove</string>
    <string name="list_add_button_create_list">Create list</string>
    <string name="list_add_hint_description">List description</string>
    <string name="list_add_hint_title">List title</string>
    <string name="list_add_subtitle_word">Words:</string>
    <string name="list_add_word_id">word%s</string>
    <string name="list_add_meaning_id">meaning%s</string>
    <string name="list_add_kana_id">kana%s</string>
    <string name="list_add_subtitle_information">List Information:</string>
    <string name="custom_list_meaning">意味:</string>
    <string name="custom_list_hiragana">ひらがな:</string>
    <string name="custom_list_japanese">日本語:</string>
    <string name="custom_list_list_content">List content:</string>
    <string name="custom_list_button">Delete list</string>
</resources>
