<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/fragment_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home"
        app:showAsAction="always" />
    <item
        android:id="@+id/fragment_practice"
        android:enabled="true"
        android:icon="@drawable/ic_practice"
        android:title="@string/menu_practice"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/fragment_settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_settings"
        app:showAsAction="always" />
</menu>
