<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginHorizontal="8dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/japaneseLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/japanese"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/alphabet_example_japanese"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/japaneseWord"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.7"
                android:textSize="14sp"
                tools:text="ありがとうございます" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/romajiLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/japaneseLayout">

            <TextView
                android:id="@+id/romaji"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/alphabet_example_romaji"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/romajiWord"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.7"
                android:textSize="14sp"
                tools:text="arigatougozaimasu" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/meaningLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/romajiLayout">

            <TextView
                android:id="@+id/meaning"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/alphabet_example_meaning"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/meaningWord"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.7"
                android:textSize="14sp"
                tools:text="Thank you" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
