<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/japaneseLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/japanese"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/custom_list_japanese"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/japaneseWord"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.7"
                android:textSize="14sp"
                tools:text="寝る" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/hiraganaLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/japaneseLayout">

            <TextView
                android:id="@+id/hiragana"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/custom_list_hiragana"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/hiraganaWord"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.7"
                android:textSize="14sp"
                tools:text="ねる" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/meaningLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hiraganaLayout">

            <TextView
                android:id="@+id/meaning"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/custom_list_meaning"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/meaningWord"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.7"
                android:textSize="14sp"
                tools:text="to Sleep" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
